Import of SKIM/Error-Pure-0.03 from CPAN.
gitpan-cpan-distribution: Error-Pure
gitpan-cpan-version:      0.03
gitpan-cpan-path:         SKIM/Error-Pure-0.03.tar.gz
gitpan-cpan-author:       SKIM
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.03 (July 13, 2011)
+- Add file exist check. Fix error in abs_path('(eval)') on Windows.
+
 0.02 (July 12, 2011)
 - Rename module test directories to better names (':' isn't allowed on window
   platform). PR#69402
