--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+0.04 (July 19, 2011)
+- Fix situation with Test::Pod. It not usable in Perl lesser then 5.8.0.
+- Fix links in documentation.
+- Fix email link in documentation.
+- Better AUTHOR section in doc.
+- Remove obsolete ';' in code.
+- Remove "(3pm)" from pod doc.
+
 0.03 (July 13, 2011)
 - Add file exist check. Fix error in abs_path('(eval)') on Windows.
 
