Import of SKIM/Error-Pure-0.05 from CPAN.
gitpan-cpan-distribution: Error-Pure
gitpan-cpan-version:      0.05
gitpan-cpan-path:         SKIM/Error-Pure-0.05.tar.gz
gitpan-cpan-author:       SKIM
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.05 (July 28, 2011)
+- Test::Pod not usable in Perl lesser then 5.8.0. (again)
+
 0.04 (July 19, 2011)
 - Fix situation with Test::Pod. It not usable in Perl lesser then 5.8.0.
 - Fix links in documentation.
