Import of SKIM/Error-Pure-0.06 from CPAN.
gitpan-cpan-distribution: Error-Pure
gitpan-cpan-version:      0.06
gitpan-cpan-path:         SKIM/Error-Pure-0.06.tar.gz
gitpan-cpan-author:       SKIM
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.06 (April 27, 2012)
+- Fix print for AllError output.
+- Add test for different key=value pair in backtrace.
+- Rewrite to new version of build system.
+
 0.05 (July 28, 2011)
 - Test::Pod not usable in Perl lesser then 5.8.0. (again)
 
