--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.07 (May 16, 2012)
+- Add examples/ directory.
+
 0.06 (April 27, 2012)
 - Fix print for AllError output.
 - Add test for different key=value pair in backtrace.
