--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.09 (November 12, 2012)
+- Rewrite Error::Pure::Output::Text::err_bt_pretty() to version, which returns
+  array of lines or original text with newlines.
+
 0.08 (June 22, 2012)
 - Fix Makefile.PL to Module::CPANTS::Analyse conformity.
 
