--- a/Changes
+++ b/Changes
@@ -1,3 +1,14 @@
+0.10 (June 11, 2013)
+- Add Error::Pure::HTTP::* modules to SEE ALSO sections.
+- Add SIGNATURE file.
+- Add Test::NoWarnings to tests.
+- Change situation with `err undef` or `err ()`. Returns 'undef' string now.
+- Fix SEE ALSO section in Error::Pure::ErrorList doc.
+- Fix Error::Pure::Output::Text::err_bt_pretty() doc.
+- Fix examples with err_get() in doc.
+- Improve Error::Pure::Output::Text doc.
+- Update examples/ directory.
+
 0.09 (November 12, 2012)
 - Rewrite Error::Pure::Output::Text::err_bt_pretty() to version, which returns
   array of lines or original text with newlines.
