--- a/README
+++ b/README
@@ -101,8 +101,9 @@ DEPENDENCIES
 
 SEE ALSO
     Error::Pure, Error::Pure::AllError, Error::Pure::Die,
-    Error::Pure::Error, Error::Pure::ErrorList, Error::Pure::Output::Text,
-    Error::Pure::Print.
+    Error::Pure::Error, Error::Pure::ErrorList, Error::Pure::HTTP::AllError,
+    Error::Pure::HTTP::Error, Error::Pure::HTTP::ErrorList,
+    Error::Pure::HTTP::Print, Error::Pure::Output::Text, Error::Pure::Print.
 
 ACKNOWLEDGMENTS
     Jakub Špičak and his Masser (<http://masser.sf.net>).
@@ -119,5 +120,5 @@ LICENSE AND COPYRIGHT
     BSD license.
 
 VERSION
-    0.09
+    0.10
 
