--- a/Changes
+++ b/Changes
@@ -1,8 +1,11 @@
+0.13 2013-09-22
+ - Fix deploing in 0.12 version :-(.
+
 0.12 2013-09-21
  - Add modules to SEE ALSO section in doc.
  - Fix Error::Pure::Output::Text first example in doc.
  - Fix years in LICENSE file.
- - Rewrite Changes file to CPAN::Changes::SPEC format
+ - Rewrite Changes file to CPAN::Changes::SPEC format.
  - Update README.
 
 0.11 2013-06-11
