--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.15 2013-11-13
+ - Add 'readme_from' directive to Makefile.PL.
+ - Fix die with join.
+ - Improve example in Error::Pure doc to explicit set to default
+   Error::Pure::TYPE.
+ - Rewrite B<> to C<> in doc for code.
+
 0.14 2013-10-24
  - Add Error::Pure::Utils::err_msg() subroutine.
  - Add Error::Pure::Utils::err_msg_hr() subroutine.
