Import of SKIM/Error-Pure-0.17 from CPAN.
gitpan-cpan-distribution: Error-Pure
gitpan-cpan-version:      0.17
gitpan-cpan-path:         SKIM/Error-Pure-0.17.tar.gz
gitpan-cpan-author:       SKIM
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -151,8 +151,8 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    BSD license.
+    BSD 2-Clause License
 
 VERSION
-    0.16
+    0.17
 
