--- a/README
+++ b/README
@@ -151,8 +151,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    BSD 2-Clause License
+     © Michal Špaček 2008-2014
+     BSD 2-Clause License
 
 VERSION
-    0.18
+    0.19
 
