Import of SKIM/Error-Pure-0.22.tar.gz from CPAN.
gitpan-cpan-distribution: Error-Pure
gitpan-cpan-version:      0.22
gitpan-cpan-path:         SKIM/Error-Pure-0.22.tar.gz
gitpan-cpan-author:       SKIM
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -151,9 +151,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Špaček 2008-2014
+     © 2008-2015 Michal Špaček
      BSD 2-Clause License
 
 VERSION
-    0.21
+    0.22
 
